  output with valueless 'exclude' attribute.
* Added: Dark Mode support in Hive admin theme.
* Added: Configuration file generated during setup can be downloaded.
* Added: Latest translations.
* Added: 'title' attribute to image tags.
* Removed: Obsolete 'no widowed words' preference setting. If this feature is
  needed it can be implemented directly with <txp:title /> tag.
* jQuery 3.4.1.
* PrismJS 1.16.0.
* jQuery File Upload 9.31.0.

Changes in 4.7.3

* Maintenance release with enhancements and bug fixes.
* Fixed: 'Export to disk' checkbox state inconsistencies for new assets.
* Fixed: Logout issue in Classic admin theme.
* Fixed: A bug when PHP 'mbstring' extension is disabled.
* Fixed: Prevent Alt+S from triggering save (thanks, o10154016).
* Fixed: Language .ini files trump old .txt files.
* Changed: Permit falling back on pophelp in 'lang' database table.
* Changed: 'Show password' on Users panel displays both passwords.
* Added: <txp:yield /> values are available in external forms too.
* Added: Indicator for GD Graphics Library WebP support in Diagnostics panel.
* Added: Latest translations.
* Added: Complete Italian inline help translation. Many thanks to Giampiero
  Mellea for all their work.
* Developer: Introduce L10n/Lang->languageList() to get language tuples.
* Textile 3.7.1. See https://github.com/textile/php-textile/releases/tag/v3.7.1
  for full list of changes in this release (thanks, gocom).

Changes in 4.7.2

* Maintenance release with enhancements and bug fixes.
* Fixed: A bug with <txp:link_to_[next|prev] /> tags in 'month' URL mode.
* Fixed: A bug with <txp:related_articles /> tag.
* Fixed: <txp:search_input /> will always respect its 'form' attribute setting,
  if set.
* Fixed: A bug with the global 'not' attribute.
* Fixed: Multibyte characters are correctly obfuscated by <txp:email />.
* Fixed: Salutation text within emails not displaying correctly.
* Fixed: 'problem_connecting_update_server' language string grouping corrected.