@@ -1,6 +1,6 @@
 BSD 3-Clause License
 
-Copyright (c) 2003-2004, Dean Allen <dean@textism.com>
+Copyright (c) 2003-2004, Dean Allen
 All rights reserved.
 
 Thanks to Carlo Zottmann <carlo@g-blog.net> for refactoring
@@ -11,7 +11,7 @@ Additions and fixes Copyright (c) 2010    Stef Dawson       http://stefdawson.co
 Additions and fixes Copyright (c) 2010-17 Netcarver         https://github.com/netcarver
 Additions and fixes Copyright (c) 2011    Jeff Soo          http://ipsedixit.net/
 Additions and fixes Copyright (c) 2012    Robert Wetzlmayr  http://wetzlmayr.com/
-Additions and fixes Copyright (c) 2012-18 Jukka Svahn       http://rahforum.biz/
+Additions and fixes Copyright (c) 2012-19 Jukka Svahn       http://rahforum.biz/
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
