@@ -14,6 +14,8 @@ Changes in TBC (upcoming)
 * Added: 'title' attribute to image tags.
 * Removed: Obsolete 'no widowed words' preference setting. If this feature is
   needed it can be implemented directly with <txp:title /> tag.
+* Textile 3.7.2. See https://github.com/textile/php-textile/releases/tag/v3.7.2
+  for full list of changes in this release (thanks, gocom).
 * jQuery 3.4.1.
 * PrismJS 1.16.0.
 * jQuery File Upload 9.31.0.
